Corrected contrast errors

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -23,7 +23,6 @@
         width: 30%;
         position: absolute;
         z-index: 1;
-        color: white;
         text-align: left;
         border-radius: 8px;
         padding: 20px;
@@ -41,34 +40,28 @@
         justify-content: center;
         align-items: center;
     }
-    
-    .weather-div img {
-        width: 5rem;
-        height: auto;
+
+    .weather-div h2::after {
+        content: "⛅";
+        margin: 0 0 0 10px;
     }
     
-    .weather-div img::after {
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding: 3px 7px;
-        font-size: 12px;
-        border-radius: 3px;
+    .weather-div img {
+        display: none;
     }
 
     .data {
         left: 0;
         top: 120px;
-        background-color: var(--moss-green);
+        background-color: var(--brunswick-green);
+        border-bottom: solid 2px var(--buff);
     }
 
     .weather {
         right: 0;
         bottom: -50px;
-        background-color: var(--moss-green);
-        border-bottom: solid 2px var(--brunswick-green);
+        background-color: var(--brunswick-green);
+        border-bottom: solid 2px var(--buff);
     }
 
     footer {
