--- a/styles/place.css
+++ b/styles/place.css
@@ -16,7 +16,6 @@
 body {
     min-height: 100vh;
     width: 100%;
-    background-color: white;
 }
 
 header {
@@ -44,23 +43,22 @@ section {
 
 .data {
     border-bottom: solid 2px var(--brunswick-green);
-    background-color: var(--moss-green-2);
+    background-color: var(--brunswick-green);
 }
 
 .weather {
     border-bottom: solid 2px var(--brunswick-green);
-    background-color: var(--moss-green);
+    background-color: var(--brunswick-green);
 }
 
 .highlight {
-    color: white;
     font-weight: bolder;
 }
 
 h2 {
     text-align: center;
     font-size: 30px;
-    color: var(--brunswick-green);
+    color: white;
 }
 
 .weather-div {
@@ -81,7 +79,7 @@ h2 {
 
 section p {
     padding: 5px;
-    color: var(--brunswick-green);
+    color: white;
 }
 
 footer {
